# EpiLog

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
EpiLog/: __init__.py  benchmark.py  manager.py
src/EpiLog/: __init__.py  benchmark.py  manager.py
tests/: __init__.py  conftest.py  test_bench.py  test_manager.py
