[build-system]
requires = ["setuptools>=58.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EpiLog"
authors = [
    {name = "Jason C Del Rio", email = "spillthetea917@gmail.com"},
]
maintainers = [
    {name = "Jason C Del Rio", email = "spillthetea917@gmail.com"},
]
description = "Simple No-Frills Logging Manager"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["logging manager", "Benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/Spill-Tea/EpiLog"

[tool.setuptools.packages.find]
where = ["EpiLog"]  # list of folders that contain the packages (["."] by default)

[project.optional-dependencies]
dev = ["pytest", "flake8", "pdoc", "pytest-cov", "wheel"]
test = ["pytest", "flake8", "pytest-cov", "wheel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-rA --cov=EpiLog --cov-report term-missing --cov-fail-under=90"
