[build-system]
requires = ["setuptools>=67.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "EpiLog"
authors = [
    {name = "Jason C Del Rio", email = "spillthetea917@gmail.com"},
]
maintainers = [
    {name = "Jason C Del Rio", email = "spillthetea917@gmail.com"},
]
description = "Simple No-Frills Logging Manager"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = ["logging", "benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme", "dependencies"]

[project.urls]
homepage = "https://github.com/Spill-Tea/EpiLog"
issues = "https://github.com/Spill-Tea/EpiLog/issues"

[tool.setuptools]
package-dir = {"" = "EpiLog"}

[tool.setuptools.dynamic]
version = {attr = "__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest", "flake8", "pdoc", "pytest-cov", "wheel"]
test = ["pytest", "flake8", "pytest-cov", "wheel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-rA --cov=EpiLog --cov-report term-missing --cov-fail-under=90"
